--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -88,7 +88,8 @@ components:
         storageClassName: local-path
     postgres:
       enabled: true
-      tag: 16
+      image:
+        tag: 16
       storage:
         size: 1Gi
         storageClass: local-path
@@ -117,7 +118,3 @@ addons:
       repository: bitnami/redis
       tag: 8.2.1
     port: 6379
-    resources:
-      limits:
-        cpu: 100m
-        memory: 128Mi
