--- a/charts/commons/tests/pvc_test.yaml
+++ b/charts/commons/tests/pvc_test.yaml
@@ -37,3 +37,21 @@ tests:
       - equal:
           path: spec.storageClassName
           value: local-path
+  # --- PVC ---
+  - it: Vérifie le PVC redis-data
+    documentSelector:
+      path: metadata.name
+      value: test-redis-data
+    asserts:
+      - equal:
+          path: metadata.name
+          value: test-redis-data
+      - equal:
+          path: spec.accessModes[0]
+          value: ReadWriteOnce
+      - equal:
+          path: spec.resources.requests.storage
+          value: 1Gi
+      - equal:
+          path: spec.storageClassName
+          value: standard
