--- a/charts/commons/tests/pvc_test.yaml
+++ b/charts/commons/tests/pvc_test.yaml
@@ -47,11 +47,8 @@ tests:
           path: metadata.name
           value: test-redis-data
       - equal:
-          path: spec.accessModes[0]
-          value: ReadWriteOnce
-      - equal:
           path: spec.resources.requests.storage
           value: 1Gi
       - equal:
           path: spec.storageClassName
-          value: standard
+          value: test
