--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -130,3 +130,6 @@ addons:
     image:
       repository: ghcr.io/cloudnative-pg/postgresql
       tag: 16
+    cluster:
+      username: changeme
+      password: changeme
