--- a/charts/commons/templates/cnpg/secret.yaml
+++ b/charts/commons/templates/cnpg/secret.yaml
@@ -1,4 +1,5 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
+{{- $components = append $components .Values.addons }}
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.postgres }}
