--- a/charts/commons/templates/cnpg/init-sql.yaml
+++ b/charts/commons/templates/cnpg/init-sql.yaml
@@ -1,5 +1,5 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
-{{- $components := append $components .Values.addons }}
+{{- $components = append $components .Values.addons }}
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.postgres }}
