--- a/charts/commons/tests/secrets_test.yaml
+++ b/charts/commons/tests/secrets_test.yaml
@@ -26,6 +26,24 @@ tests:
       - templates/cnpg/secret.yaml
     documentSelector:
       path: metadata.name
+      value: test-nginx-postgres-secret
+    asserts:
+      - equal:
+          path: type
+          value: kubernetes.io/basic-auth
+      - equal:
+          path: data.username
+          value: Y2hhbmdlbWU=
+      - equal:
+          path: data.password
+          value: Y2hhbmdlbWU=
+
+  # --- Secret ---
+  - it: Vérifie le Secret Postgres
+    templates:
+      - templates/cnpg/secret.yaml
+    documentSelector:
+      path: metadata.name
       value: test-postgres-secret
     asserts:
       - equal:
