--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -5,7 +5,7 @@ values:
 templates:
   - templates/ingress.yaml
 release:
-  name: test-nginx
+  name: test
 tests:
   # --- Ingress ---
   - it: Vérifie l'Ingress web
