--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -47,4 +47,4 @@ tests:
           value: ConfigMap
       - equal:
           path: metadata.name
-          value: test-postgres-configmap
+          value: test-nginx-postgres-configmap
