--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -11,6 +11,20 @@ tests:
       - templates/cnpg/cluster.yaml
     documentSelector:
       path: metadata.name
+      value: test-nginx
+    asserts:
+      - equal:
+          path: spec.instances
+          value: 1
+      - equal:
+          path: spec.imageName
+          value: ghcr.io/cloudnative-pg/postgresql:16
+
+  - it: Vérifie le Cluster Postgres global
+    templates:
+      - templates/cnpg/cluster.yaml
+    documentSelector:
+      path: metadata.name
       value: test
     asserts:
       - equal:
@@ -26,11 +40,11 @@ tests:
       - templates/cnpg/init-sql.yaml
     documentSelector:
       path: metadata.name
-      value: test-postgres-configmap
+      value: test-nginx-postgres-configmap
     asserts:
       - equal:
           path: kind
           value: ConfigMap
       - equal:
           path: metadata.name
-          value: test-postgres-configmap
+          value: test-nginx-postgres-configmap
