--- a/charts/commons/tests/ingress_test.yaml
+++ b/charts/commons/tests/ingress_test.yaml
@@ -11,7 +11,7 @@ tests:
   - it: Vérifie l'Ingress web
     documentSelector:
       path: metadata.name
-      value: test
+      value: test-nginx
     asserts:
       - equal:
           path: spec.rules[0].host
