--- a/charts/commons/tests/services_test.yaml
+++ b/charts/commons/tests/services_test.yaml
@@ -38,14 +38,14 @@ tests:
   - it: Vérifie le Service vscode
     documentSelector:
       path: metadata.name
-      value: test-vscode
+      value: test-code-server
     asserts:
       - equal:
           path: kind
           value: Service
       - equal:
           path: metadata.name
-          value: test-vscode
+          value: test-code-server
       - equal:
           path: spec.type
           value: ClusterIP
@@ -60,10 +60,10 @@ tests:
           value: 8080
       - equal:
           path: metadata.labels.app
-          value: vscode
+          value: code-server
       - equal:
           path: spec.selector.app
-          value: vscode
+          value: code-server
 
   - it: Vérifie le Service redis
     documentSelector:
