--- a/charts/commons/templates/cnpg/secret.yaml
+++ b/charts/commons/templates/cnpg/secret.yaml
@@ -1,5 +1,7 @@
 {{- $components := include "commons.withAddons" . | fromYamlArray }}
-{{- $components = append $components .Values.addons }}
+{{- $raw := .Values.addons | default dict }}
+{{- $_ := set $raw "name" "postgres" }}
+{{- $components = append $components $raw }}
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.postgres }}
@@ -10,7 +12,7 @@ data:
   password: {{ .cluster.password | b64enc | quote }}
 kind: Secret
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-postgres-secret
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-secret
 type: kubernetes.io/basic-auth
 ---
 {{- end }}
