--- a/charts/commons/templates/cnpg/init-sql.yaml
+++ b/charts/commons/templates/cnpg/init-sql.yaml
@@ -1,5 +1,6 @@
-{{- $components := include "commons.withAddons" . | fromYamlArray }}
-{{- $components = append $components .Values.addons }}
+{{- $raw := .Values.addons | default dict }}
+{{- $_ := set $raw "name" "postgres" }}
+{{- $components = append $components $raw }}
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.postgres }}
@@ -8,7 +9,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-postgres-configmap
+  name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" .name "component" $component) }}-configmap
 data:
   init.sql: |
     echo "toto"
