--- a/charts/commons/tests/cnpg_test.yaml
+++ b/charts/commons/tests/cnpg_test.yaml
@@ -25,7 +25,7 @@ tests:
       - templates/cnpg/cluster.yaml
     documentSelector:
       path: metadata.name
-      value: test
+      value: test-postgres
     asserts:
       - equal:
           path: spec.instances
@@ -40,11 +40,11 @@ tests:
       - templates/cnpg/init-sql.yaml
     documentSelector:
       path: metadata.name
-      value: test-nginx-postgres-configmap
+      value: test-nginx-configmap
     asserts:
       - equal:
           path: kind
           value: ConfigMap
       - equal:
           path: metadata.name
-          value: test-nginx-postgres-configmap
+          value: test-nginx-configmap
