--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -102,10 +102,10 @@ components:
         username: changeme
         password: changeme
       init:
-        databases:
-          - name: analytics
-            owner: analyst
-            password: securepass
+        - CREATE EXTENSION postgis;
+        - CREATE EXTENSION postgis_topology;
+        - CREATE EXTENSION fuzzystrmatch;
+        - CREATE EXTENSION postgis_tiger_geocoder;
 
 addons:
   vscode:
