--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -13,10 +13,10 @@ global:
       tag: 17
   ingress:
     className: traefik
-#  securityContext:
-#    runAsUser: 1000
-#    runAsGroup: 1000
-#    fsGroup: 1000
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
 
 addons:
   vscode:
